<resources>
    <string name="string_user">Usuario</string>
    <string name="string_pass">Contraseña</string>
    <string name="string_repass">Repite contraseña</string>
    <string name="string_email">Correo electrónico</string>
    <string name="btn_reg">Registrar</string>
    <string name="btn_log">Iniciar sesión</string>
    <string name="str_name">Nombre :\u0020 </string>
    <string name="str_city">Ciudad :\u0020</string>
    <string name="str_country">País :\u0020</string>
    <string name="string_cont">Continentes</string>
    <string name="string_eu">Europa</string>
    <string name="string_am">America</string>
    <string name="string_af">Africa</string>
    <string name="string_oc">Oceania</string>
    <string name="string_as">Asia</string>
    <string name="string_egip">Egipto</string>
    <string name="string_marrue">Marruecos</string>
    <string name="string_sudafr">Sudafrica</string>
    <string name="string_canad">Canada</string>
    <string name="string_eeuu">EE.UU</string>
    <string name="string_mex">México</string>
    <string name="string_china">China</string>
    <string name="string_india">India</string>
    <string name="string_jap">Japón</string>
    <string name="string_alem">Alemania</string>
    <string name="string_es">España</string>
    <string name="string_fr">Francia</string>
    <string name="string_austr">Australia</string>
    <string name="string_nuezela">Nueva Zelanda</string>
    <string name="string_palaos">Palaos</string>
    <string name="string_rest">Restaurantes</string>
    <string name="string_hotel">Hoteles</string>
    <string name="string_lugar">Lugares</string>
    <string name="string_logout">Cerrar sesión</string>
    <string name="string_nuser">Nuevo nombre de usuario</string>
    <string name="string_npass">Nueva contraseña</string>
    <string name="string_listauser">Lista de usuarios</string>
    <string name="string_edit">Editar datos del usuario</string>
    <string name="string_delete">Eliminar usuario</string>
    <string name="string_addplace">Añadir lugar</string>
    <string name="string_addrest">Añadir restaurante</string>
    <string name="string_addhotel">Añadir hotel</string>
    <string name="string_listhotel">Lista de hoteles</string>
    <string name="string_deletehotel">Eliminar hotel</string>
    <string name="string_listrest">Lista de restaurantes</string>
    <string name="string_deleterest">Eliminar restaurante</string>
    <string name="string_listplace">Lista de lugares</string>
    <string name="string_deleteplace">Eliminar lugar</string>
    <string name="string_nameplace">Nombre del lugar</string>
    <string name="string_urlplace">Url del lugar</string>
    <string name="string_cityplace">Ciudad del lugar</string>
    <string name="string_countryplace">País del lugar</string>
    <string name="string_namerest">Nombre del restaurante</string>
    <string name="string_urlrest">Url del restaurante</string>
    <string name="string_cityrest">Ciudad del restaurante</string>
    <string name="string_countryrest">País del restaurante</string>
    <string name="string_namehotel">Nombre del hotel</string>
    <string name="string_urlhotel">Url del hotel</string>
    <string name="string_cityhotel">Ciudad del hotel</string>
    <string name="string_countryhotel">País del hotel</string>
</resources>