<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_below="@+id/repassword"
        android:layout_marginTop="54dp"
        android:text="@string/btn_reg" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/string_user" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_marginTop="30dp"
        android:hint="@string/string_pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginTop="30dp"
        android:hint="@string/string_email" />

    <EditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="30dp"
        android:hint="@string/string_repass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_below="@+id/btnsignup"
        android:layout_marginTop="62dp"
        android:text="@string/btn_log" />

</RelativeLayout>