<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gestion">


    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/string_nuser"
        android:inputType="textPersonName"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/string_npass"
        android:inputType="textPersonName"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/string_email"
        android:inputType="textPersonName"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/string_edit"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnView"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnUpdate"
        android:text="@string/string_delete"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddLugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnDelete"
        android:text="@string/string_listauser"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnAddLugar"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnUpdate"
        android:text="@string/string_addplace"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddRestaurante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnAddHotel"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnUpdate"
        android:text="@string/string_addhotel"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddRestaurante"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnAddRestaurante"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnUpdate"
        android:text="@string/string_addrest"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddHotel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddLugar"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>