<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#069E1E"
        android:text="@string/string_cont"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonAf"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="@drawable/shape"
        android:textColor="#FFFFFF"
        android:text="@string/string_af"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCont"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonOc"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="@drawable/shape"
        android:textColor="#FFFFFF"
        android:text="@string/string_oc"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEu"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonAs"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="@drawable/shape"
        android:textColor="#FFFFFF"
        android:text="@string/string_as"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAm"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonAm"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="@drawable/shape"
        android:textColor="#FFFFFF"
        android:text="@string/string_am"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAf"
        app:layout_constraintVertical_bias="0.5" />



    <Button
        android:id="@+id/buttonEu"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="@drawable/shape"
        android:textColor="#FFFFFF"
        android:text="@string/string_eu"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonOc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAs"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>