<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContinentesCarpeta.Oceania">


    <TextView
        android:id="@+id/textOceania"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="101dp"
        android:text="@string/string_oc"
        android:textColor="#069E1E"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout

            android:id="@+id/buttonAustralia"
            android:layout_width="390dp"
            android:layout_height="100dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/shape"
            android:backgroundTint="#069E1E"
            android:clickable="true"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="123dp"
                android:layout_height="127dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/australia" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="@string/string_austr"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonNuevaZelanda"
            android:layout_width="390dp"
            android:layout_height="100dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/shape"
            android:backgroundTint="#069E1E"
            android:clickable="true"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="123dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/nuevazelanda" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="@string/string_nuezela"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonPalaos"
            android:layout_width="390dp"
            android:layout_height="100dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/shape"
            android:backgroundTint="#069E1E"
            android:clickable="true"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="130dp"
                android:layout_height="139dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/palaos" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="@string/string_palaos"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>