<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContinentesCarpeta.Africa">


    <TextView
        android:id="@+id/textAfrica"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="101dp"
        android:text="@string/string_af"
        android:textColor="#069E1E"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAfrica">

        <LinearLayout

            android:id="@+id/buttonEgipto"
            android:layout_width="390dp"
            android:layout_height="100dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/shape"
            android:backgroundTint="#069E1E"
            android:clickable="true"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="123dp"
                android:layout_height="127dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/egipto" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="@string/string_egip"
                android:textColor="#FFFFFF"
                android:textSize="48sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonMarruecos"
            android:layout_width="390dp"
            android:layout_height="100dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/shape"
            android:backgroundTint="#069E1E"
            android:clickable="true"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="123dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/marruecos" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="@string/string_marrue"
                android:textColor="#FFFFFF"
                android:textSize="48sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonSudafrica"
            android:layout_width="390dp"
            android:layout_height="100dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/shape"
            android:backgroundTint="#069E1E"
            android:clickable="true"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="130dp"
                android:layout_height="139dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/sudafrica" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="@string/string_sudafr"
                android:textColor="#FFFFFF"
                android:textSize="48sp" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>